...
            <Text
              style={{
                color: colors.textTertiary,
                fontSize: 15,
              }}
            >
              Not Now
            </Text>
          </Pressable>
        </Animated.View>
      </View>
    </Modal>
  );
...
